sandbox/output
GildedRoseTest.java:36: error: cannot find symbol
            .map(GildedRose.generateNormalItemsForSellInGreaterThan0());
                           ^
  symbol:   method generateNormalItemsForSellInGreaterThan0()
  location: class GildedRose
GildedRoseTest.java:71: error: cannot find symbol
            .map(GildedRose.generateNormalItemsForSellInNoMoreThan0());
                           ^
  symbol:   method generateNormalItemsForSellInNoMoreThan0()
  location: class GildedRose
GildedRoseTest.java:70: error: cannot find symbol
            .filter(GildedRose.isSellInNoMoreThan0())
                              ^
  symbol:   method isSellInNoMoreThan0()
  location: class GildedRose
3 errors
